# aitrios-rpi-sample-apps

./: .gitignore  README.md
.github/workflows/: github-ruff-check.yml
examples/highvis/: .gitignore  README.md  app.py  pyproject.toml
examples/highvis/docs/: sequence.plantuml
examples/highvis/highvis/: main.py
examples/highvis/highvis/matcher/: __init__.py  object_event.py  overlay_detector.py  tracker_helper.py
examples/highvis/highvis/matcher/example/: __init__.py  utils.py
examples/highvis/highvis/tracker/: __init__.py  detections.py
examples/highvis/highvis/tracker/annotator/: __init__.py  annotate.py  colors.py
examples/highvis/highvis/tracker/stream/: __init__.py  stream_capture.py  stream_frame.py  stream_sources.py  utils.py
examples/highvis/highvis/tracker/tracker/: basetrack.py
examples/line-monitor/: HOWTO.md  README.md  app.py  pyproject.toml
examples/line-monitor/assets/: test.mpg
examples/line-monitor/docs/: sequence.plantuml
examples/line-monitor/fsm/: __init__.py  base_state.py  fsm.py  scan_sequence.py  states.py
examples/line-monitor/line_monitor/: main.py
examples/line-monitor/line_monitor/aicamera/: __init__.py  camera.py  frame_rate.py  model_decoder.py  worker.py
examples/line-monitor/line_monitor/fsm/: __init__.py  base_state.py  fsm.py  scan_sequence.py  states.py
examples/line-monitor/line_monitor/util/: JSONFileManager.py  __init__.py  annotator.py  class2label.py
examples/parking-monitor/: LICENSE.txt  README.md  app.py  app_pts_selector.py  config.json  parking_example.json  pyproject.toml
examples/parking-monitor/parking_monitor/: README.md  __init__.py  app_parking_monitor.py  app_pts_selector.py
examples/parking-monitor/parking_monitor/tracker/: __init__.py
examples/parking-monitor/parking_monitor/tracker/annotator/: __init__.py  annotate.py
examples/parking-monitor/parking_monitor/tracker/stream/: __init__.py  stream_sources.py  utils.py
examples/parking-monitor/parking_monitor/tracker/tracker/: byte_tracker.py  kalman_filter.py  matching.py
examples/parking-monitor/parking_monitor/utils/: __init__.py  detections.py  tracker_helper.py  utils.py
examples/queue-monitor/: .gitignore  LICENSE.txt  README.md  app.py  example.json  pyproject.toml
examples/queue-monitor/queue_monitor/: app_pts_selector.py  app_queue.py
examples/queue-monitor/queue_monitor/matcher/: default_settings.py  object_event.py  overlay_detector.py  tracker_helper.py
examples/queue-monitor/queue_monitor/matcher/example/: utils.py
examples/queue-monitor/queue_monitor/tracker/: __init__.py  detections.py
examples/queue-monitor/queue_monitor/tracker/annotator/: __init__.py  annotate.py
examples/queue-monitor/queue_monitor/tracker/stream/: stream_sources.py  utils.py
examples/queue-monitor/queue_monitor/tracker/tracker/: basetrack.py  bbox_overlaps.py  byte_tracker.py  kalman_filter.py  matching.py
examples/workout-monitor/: README.md  app.py  pyproject.toml
examples/workout-monitor/workout_monitor/: app_workout.py
examples/workout-monitor/workout_monitor/matcher/: default_settings.py  object_event.py  overlay_detector.py  tracker_helper.py
examples/workout-monitor/workout_monitor/matcher/example/: annotation_work_item.py  utils.py
examples/workout-monitor/workout_monitor/tracker/: __init__.py  detectionsKeyPoint.py
examples/workout-monitor/workout_monitor/tracker/annotator/: colors.py
examples/workout-monitor/workout_monitor/tracker/stream/: stream_sources.py
examples/workout-monitor/workout_monitor/utlis/: postprocess.py  postprocess_yolov8_keypoints.py
tools/dataset-extender/: .gitignore  README.md  dataset_extender.py  pyproject.toml
