[tool.poetry]
name = "line-monitor"
version = "0.1.0"
description = ""
authors = ["Karl Komierowski <karl.komierowski@sony.com>"]
readme = "README.md"
packages = [{include = "line_monitor"}]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
line-monitor = 'line_monitor.main:start'