[project]
name = "line-monitor"
version = "2.0.0"
description = "Line monitor demo using Raspberry Pi AI Camera"
authors = [{name="Sony Semiconductor Solutions Corp"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.11.*"

dependencies = ["modlib"]

[tool.uv.sources]
modlib = { git = "https://github.com/SonySemiconductorSolutions/aitrios-rpi-application-module-library", branch = "main" }
