[tool.poetry]
name = "queue-monitor"
version = "0.1.0"
description = ""
authors = ["Patrick Johnson <patrick.johnson@sony.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lapx = "^0.5.9.post1"
scipy = "^1.14.0"
matplotlib = "^3.9.2"
PyYAML = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
queue-monitor = 'queue_monitor.app_queue:start_queue_manager_demo'
pts-selector = 'queue_monitor.app_pts_selector:start_pts_demo'